--- a/src/_includes/base-basic.njk
+++ b/src/_includes/base-basic.njk
@@ -39,7 +39,7 @@
     <div class="relative z-10 bg-white" >
     {%- include "partials/banner.njk" -%}
 
-    <header class="relative z-10 grid bg-white isolate grid-cols-layout shadow-border" >
+    <header class="relative z-10 bg-white grid isolate grid-cols-layout shadow-border" >
       <nav class="flex items-center w-full gap-8 col-wide">
         {# Logo #}
         <a href="/" class="text-gray-900 fine:hover:text-gray-800 block focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 py-2.5 px-2 -mx-2 rounded-sm">
@@ -47,7 +47,7 @@
           <span class="sr-only">NAV</span>
         </a>
 
-        <div class="flex items-center gap-6 py-2 ml-auto sm:py-4 whitespace-nowrap">
+        <div class="flex items-center py-2 ml-auto gap-6 sm:py-4 whitespace-nowrap">
           {# <p class="text-lg"><strong>Logget inn:</strong> <span class="uppercase">Ole Demo Doffen</span></p> #}
 
           <button class="flex flex-0 flex-col sm:flex-row items-center justify-center py-2 pl-2.5 pr-3 leading-none font-semibold sm:gap-2.5 text-blue-500 sm:rounded sm:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800" type="button">
@@ -60,11 +60,11 @@
 
     {%- block content -%}{%- endblock -%}
 
-    <footer class="grid self-end pt-6 pb-12 text-lg text-blue-500 bg-white border-t-2 border-blue-800 grid-cols-layout">
-      <div class="flex gap-12 col-wide">
+    <footer class="self-end pt-6 pb-12 text-lg text-blue-500 bg-white border-t-2 border-blue-800 grid grid-cols-layout">
+      <div class="grid gap-x-12 gap-y-2 md:flex col-wide">
         <a class="underline" href="#">Personvern og informasjonskapsler</a>
         <a class="underline" href="#">Tilgjengelighet</a>
-        <button type="button" class="inline-flex items-center gap-2 underline">
+        <button type="button" class="inline-flex items-center underline gap-2">
           <span>Del skjerm med veileder</span>
           {{ "/src/_includes/svg/icons/display.svg" | svgContents("w-6 h-6") | safe }}
         </button>
