Sortering av TW-klasser

--- a/src/_includes/partials/header-new.njk
+++ b/src/_includes/partials/header-new.njk
@@ -1,10 +1,10 @@
 {%- set audience = audienceOverride or menu.audience -%}
 
-<header class="relative z-40 grid bg-white isolate grid-cols-layout shadow-border" >
+<header class="relative z-40 bg-white grid isolate grid-cols-layout shadow-border" >
 
   {# Audience Dropdown #}
-  <div class="relative z-10 grid justify-center bg-gray-100 xs:hidden col-full">
-    <button class="flex items-center justify-center gap-2 px-4 py-2 focus:outline-none focus-visible:text-white focus-visible:bg-blue-500" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
+  <div class="relative z-10 justify-center bg-gray-100 grid xs:hidden col-full">
+    <button class="flex items-center justify-center px-4 py-2 gap-2 focus:outline-none focus-visible:text-white focus-visible:bg-blue-500" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
       {%- if ('samarbeidspartner' in page.fileSlug) -%}
       <span>{{ menu.audience[2].title }}</span>
       {%- elif ('arbeidsgiver' in page.fileSlug) -%}
@@ -15,7 +15,7 @@
       {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-4 h-4') | safe }}
     </button>
     <div class="absolute px-4 mt-px -translate-x-1/2 left-1/2 top-full">
-      <ul class="overflow-hidden text-gray-900 bg-white divide-y divide-gray-300 rounded shadow-xl max-w-max ring-1 ring-gray-200"  x-show="audienceDropdownOpen" x-on:click.outside="audienceDropdownOpen = false">
+      <ul class="overflow-hidden text-gray-900 bg-white rounded shadow-xl divide-y divide-gray-300 max-w-max ring-1 ring-gray-200"  x-show="audienceDropdownOpen" x-on:click.outside="audienceDropdownOpen = false">
         {%- for item in audience -%}
           <li class="grid">
             <a href="{{ item.href or '#' }}" class="py-2 px-3 border-l-4 fine:hover:bg-gray-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 {{ 'border-blue-500' if activeRole === item.title or activeRole === '' else 'border-transparent fine:hover:border-gray-300/75 opacity-70' }}">
@@ -36,7 +36,7 @@
 
     {# Audience #}
     <div class="relative hidden px-4 md:px-5 md:self-stretch xs:grid" x-on:click.outside="audienceDropdownOpen = false">
-      <button class="flex items-center self-center justify-center gap-4 py-2 pl-3 pr-2 border border-gray-200 rounded fine:hover:bg-deepblue-100 focus:outline-none md:hidden" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
+      <button class="flex items-center self-center justify-center py-2 pl-3 pr-2 border border-gray-200 rounded gap-4 fine:hover:bg-deepblue-100 focus:outline-none md:hidden" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
       {%- if ('samarbeidspartner' in page.fileSlug) -%}
       <span>{{ audience[2].title }}</span>
       {%- elif ('arbeidsgiver' in page.fileSlug) -%}
@@ -47,7 +47,7 @@
         {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-4 h-4') | safe }}
       </button>
       <div class="xs:absolute md:static xs:top-full xs:left-0">
-        <ul class="justify-center text-lg bg-white border border-gray-200 divide-y divide-gray-200 rounded shadow-lg md:rounded-none md:bg-transparent md:shadow-none md:border-0 md:divide-y-0 md:gap-4 md:flex" x-bind:class="audienceDropdownOpen ? 'grid' : 'hidden md:flex'">
+        <ul class="justify-center text-lg bg-white border border-gray-200 rounded shadow-lg divide-y divide-gray-200 md:rounded-none md:bg-transparent md:shadow-none md:border-0 md:divide-y-0 md:gap-4 md:flex" x-bind:class="audienceDropdownOpen ? 'grid' : 'hidden md:flex'">
           {%- for item in audience -%}
             <li class="grid">
               <a href="{{ item.href or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center py-2 px-3 md:px-0.5 md:pb-5 text-gray-900 border-l-4 md:border-l-0 md:border-b-4 md:pt-6 {{ 'border-blue-500' if activeRole === item.title else 'border-transparent fine:hover:border-gray-300/75 opacity-70' }}">
@@ -61,7 +61,7 @@
 
     {# Menu Buttons #}
     {%- set menuButtonClasses = "flex flex-col sm:flex-row items-center justify-center py-2.5 px-3 leading-none font-semibold sm:gap-1 text-blue-500 sm:rounded md:px-4 sm:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800" -%}
-    <div class="flex items-end gap-2 ml-auto sm:py-4 md:py-3">
+    <div class="flex items-end ml-auto gap-2 sm:py-4 md:py-3">
       <button class="{{ menuButtonClasses }}" x-on:click="notifyOpen = !notifyOpen, menuOpen = false" x-bind:class="notifyOpen && 'bg-deepblue-50'">
         <span class="relative">
           {{ '/src/_includes/svg/icons/notification.svg' | svgContents('w-7 h-7') | safe }}
