--- a/src/pages/kontor/kontor.njk
+++ b/src/pages/kontor/kontor.njk
@@ -9,12 +9,12 @@ bodyClass: 'bg-white'
 {%- block content -%}
   <main class="min-h-[61vh] text-lg text-gray-800">
 
-    <div class="grid pt-8 pb-4 grid-cols-layout ">
+    <div class="pt-8 pb-4 grid grid-cols-layout ">
       <div class="col-narrow">
         <h1 class="text-3xl font-semibold leading-tight text-gray-900 md:text-4xl">
           NAV Andeby
         </h1>
-        <p class="flex items-baseline gap-4 mt-1">
+        <p class="flex items-baseline mt-1 gap-4">
           <span class="text-sm tracking-wider text-gray-700 uppercase">
             NAV kontor
           </span>
@@ -24,7 +24,7 @@ bodyClass: 'bg-white'
       </div>
     </div>
 
-    <div class="grid pt-4 pb-20 grid-cols-layout md:pt-6">
+    <div class="pt-4 pb-20 grid grid-cols-layout md:pt-6">
       <div class="col-narrow">
         <div class="max-w-prose">
 
@@ -77,7 +77,7 @@ bodyClass: 'bg-white'
       </div>
     </div>
 
-    <div class="grid pb-12 bg-gray-100 grid-cols-layout">
+    <div class="pb-12 bg-gray-100 grid grid-cols-layout">
       <div class="col-narrow">
         <div class="max-w-prose">
 
@@ -94,7 +94,7 @@ bodyClass: 'bg-white'
 
 {%- macro iconBox(box) -%}
   <div class="grid isolate">
-    <div class="z-10 grid w-16 mx-auto translate-y-1/2 bg-blue-100 rounded-full place-items-center aspect-square">
+    <div class="z-10 w-16 mx-auto bg-blue-100 rounded-full grid translate-y-1/2 place-items-center aspect-square">
       {{ box.icon | svgContents('w-7 h-7 shrink-0') | safe }}
     </div>
     <div class="px-6 py-8 bg-white md:py-12 md:px-10">
