--- a/src/pages/kyrillisk.njk
+++ b/src/pages/kyrillisk.njk
@@ -6,8 +6,8 @@ language: 'uk'
 
 {%- block content -%}
   <main class="py-8 pb-12 text-xl md:py-12 px-clamp-gap">
-    <h1 class="max-w-screen-lg mx-auto text-3xl font-semibold leading-tight md:leading-none md:text-5xl md:text-center">Kyrillisk subset til fonten Source Sans 3</h1>
-    <div class="grid max-w-screen-lg gap-12 mx-auto mt-8 md:mt-12 md:grid-cols-2">
+    <h1 class="mx-auto text-3xl font-semibold leading-tight max-w-screen-lg md:leading-none md:text-5xl md:text-center">Kyrillisk subset til fonten Source Sans 3</h1>
+    <div class="mx-auto mt-8 grid max-w-screen-lg gap-12 md:mt-12 md:grid-cols-2">
     <div class="p-4 rounded-lg md:p-8 markdown max-w-prose bg-gray-50">
       <h2 class="text-2xl font-semibold leading-tight">Hvis du har blitt rammet av krigen i Ukraina</h2>
       <p class="mt-2">Krigen i Ukraina forårsaker mye angst og usikkerhet hos mange mennesker. Er du flyktning og er i en <em>vanskelig</em> livssituasjon, <strong>kan</strong> du få hjelp fra NAV (NAV).</p>
