--- a/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
+++ b/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
@@ -25,8 +25,8 @@ permalink: '/produktoversikt-samarbeidspartner/'
       </div>
     </div>
 
-    <div class="grid mt-8 lg:mt-12 grid-cols-layout">
-      <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start col-narrow lg:col-wide">
+    <div class="mt-8 grid lg:mt-12 grid-cols-layout">
+      <div class="w-full pb-20 grid gap-8 lg:gap-x-16 lg:items-start col-narrow lg:col-wide">
         <ul class="text-xl max-w-prose">
         {%- for item in roleFilter -%}
           <li class="border-t border-gray-300">
