--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,12 +1,12 @@
 {# Navigation (Private) #}
 <nav class="relative">
-  <div class="absolute inset-x-0 z-50 grid pt-8 pb-16 bg-white shadow-xl grid-cols-layout md:pt-12 top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
+  <div class="absolute inset-x-0 z-50 pt-8 pb-16 bg-white shadow-xl grid grid-cols-layout md:pt-12 top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
 
     <div class="col-wide">
       <div class="grid gap-3 md:gap-6 md:grid-flow-col-dense md:grid-cols-9 md:grid-rows-[1fr_auto]">
 
         {# Min side #}
-        <div class="grid flex-auto row-start-1 p-4 rounded-lg md:p-6 md:col-start-7 md:col-span-3 md:row-span-2 bg-deepblue-50">
+        <div class="flex-auto p-4 rounded-lg grid row-start-1 md:p-6 md:col-start-7 md:col-span-3 md:row-span-2 bg-deepblue-50">
           <h3 class="grid">
             <span class="text-sm tracking-wider uppercase opacity-70">Logget inn som</span>
             <span class="text-2xl font-semibold leading-none">Fjong Vindelbro</span>
@@ -34,7 +34,7 @@
         {# Områder #}
         <div class="flex-1 pt-8 md:pt-0 md:pr-4 md:col-start-1 md:col-span-3 md:row-start-1">
           <h3 class="text-sm tracking-widest uppercase opacity-70">{{ menu.areas.title | safe }}</h3>
-          <ul class="grid gap-1 mt-2">
+          <ul class="mt-2 grid gap-1">
             {%- for link in menu.areas.linkList -%}
               <li class="break-inside-avoid">
                 <a class="inline-flex items-center gap-2.5 pl-2 pr-4 py-1.5 -mx-2  leading-normal text-blue-500 no-underline rounded font-semibold fine:hover:text-blue-600 fine:hover:bg-deepblue-50 fine:hover:underline" href="#">
@@ -54,7 +54,7 @@
           <ul class="mt-2">
             {%- for link in menu.shortcuts.linkList -%}
               <li>
-                <a class="inline-flex items-center gap-3 px-2 py-1 -mx-2 text-lg leading-normal text-blue-500 underline rounded fine:hover:text-blue-80 fine:hover:bg-deepblue-50 fine:hover:no-underline" href="#">
+                <a class="inline-flex items-center px-2 py-1 -mx-2 text-lg leading-normal text-blue-500 underline rounded gap-3 fine:hover:text-blue-80 fine:hover:bg-deepblue-50 fine:hover:no-underline" href="#">
                   {%- if link.icon -%}
                     {{ link.icon | svgContents('w-6 h-6 opacity-80') | safe }}
                   {%- endif -%}
@@ -66,11 +66,11 @@
         </div>
 
         {# Søk #}
-        <form class="w-full gap-2 pt-8 md:pr-12 md:max-w-4xl md:col-start-1 md:col-span-6">
+        <form class="w-full pt-8 gap-2 md:pr-12 md:max-w-4xl md:col-start-1 md:col-span-6">
           <label class="text-sm tracking-widest uppercase opacity-70" for="search">Søk</label>
           <div class="flex mt-2">
             <input class="flex-1 p-2 text-lg border border-gray-300 rounded-l focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800" id="search" type="text">
-            <button class="flex items-center col-start-2 row-start-1 gap-2 px-6 py-2 text-xl text-white bg-blue-500 rounded-r fine:hover:bg-blue-600 focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white focus:bg-blue-600" type="submit">
+            <button class="flex items-center px-6 py-2 text-xl text-white bg-blue-500 rounded-r col-start-2 row-start-1 gap-2 fine:hover:bg-blue-600 focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white focus:bg-blue-600" type="submit">
               <svg class="w-5 h-5" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M3.5 12C3.5 8.41015 6.41015 5.5 10 5.5C13.5899 5.5 16.5 8.41015 16.5 12C16.5 15.5899 13.5899 18.5 10 18.5C6.41015 18.5 3.5 15.5899 3.5 12ZM10 2.5C4.75329 2.5 0.5 6.75329 0.5 12C0.5 17.2467 4.75329 21.5 10 21.5C12.6243 21.5 15.0001 20.4359 16.7195 18.7156L25.4966 26.6149L27.5034 24.3851L18.488 16.2712C19.1354 14.9871 19.5 13.5362 19.5 12C19.5 6.75329 15.2467 2.5 10 2.5Z" /></svg>
               <span>Søk</span>
             </button>
