--- a/src/pages/forsiden/forsiden.njk
+++ b/src/pages/forsiden/forsiden.njk
@@ -9,10 +9,10 @@ permalink: '/index.html'
 
 {%- block content -%}
   <main class="text-gray-900" x-bind:inert="menuOpen || notifyOpen">
-    <div class="grid py-8 bg-white grid-cols-layout md:py-12">
+    <div class="py-8 bg-white grid grid-cols-layout md:py-12">
       <div class="col-wide">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Hva kan vi hjelpe deg med?</h2>
-        <ul class="grid gap-2 mx-auto mt-4 lg:grid-cols-3 sm:grid-cols-2 sm:gap-4 md:gap-6">
+        <ul class="mx-auto mt-4 grid gap-2 lg:grid-cols-3 sm:grid-cols-2 sm:gap-4 md:gap-6">
           {%- for area in areaList -%}
             <li>
               <a class="relative flex items-center justify-between gap-4 z-10 bg-deepblue-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 fine:hover:text-blue-600 fine:hover:shadow-xl fine:hover:bg-gray-100 focus:shadow-xl min-h-[7rem] lg:min-h-[9rem] pl-6 pr-[40%] py-2 overflow-hidden group c-area-card" href="#">
@@ -29,13 +29,13 @@ permalink: '/index.html'
       </div>
     </div>
 
-    <div class="grid py-8 grid-cols-layout md:pb-12 bg-red-50">
+    <div class="py-8 grid grid-cols-layout md:pb-12 bg-red-50">
       <div class="col-wide">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Snarveier</h2>
-        <ul class="grid gap-2 mt-4 md:grid-cols-2 sm:gap-3 md:gap-6 lg:grid-cols-3">
+        <ul class="mt-4 grid gap-2 md:grid-cols-2 sm:gap-3 md:gap-6 lg:grid-cols-3">
           {%- for shortcut in shortcutsList -%}
             <li>
-              <a class="flex items-center gap-4 py-4 pl-5 pr-8 transition duration-300 ease-out bg-white rounded-lg shadow-sm sm:py-6 group fine:hover:text-blue-600 fine:hover:shadow-lg fine:hover:underline focus:outline-none focus:ring-2 focus:ring-blue-600" href="#">
+              <a class="flex items-center py-4 pl-5 pr-8 bg-white rounded-lg gap-4 transition duration-300 ease-out shadow-sm sm:py-6 group fine:hover:text-blue-600 fine:hover:shadow-lg fine:hover:underline focus:outline-none focus:ring-2 focus:ring-blue-600" href="#">
                 {%- if shortcut.icon -%}
                   {{ shortcut.icon | svgContents("w-12 h-12 md:w-16 md:h-16") | safe }}
                 {%- endif -%}
@@ -49,13 +49,13 @@ permalink: '/index.html'
     </div>
 
 
-    <div class="grid py-8 mt-1 grid-cols-layout md:pb-12 bg-deepblue-50">
+    <div class="py-8 mt-1 grid grid-cols-layout md:pb-12 bg-deepblue-50">
       <div class="col-wide">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Søke og ettersende</h2>
-        <ul class="grid gap-2 mt-4 sm:gap-3 md:gap-6 md:grid-cols-2">
+        <ul class="mt-4 grid gap-2 sm:gap-3 md:gap-6 md:grid-cols-2">
           {%- for form in formsList -%}
             <li>
-              <a class="flex items-center gap-4 py-4 pl-5 pr-8 transition duration-300 ease-out bg-white rounded-lg shadow-sm sm:py-6 group fine:hover:text-blue-600 fine:hover:shadow-lg fine:hover:underline focus:outline-none focus:ring-2 focus:ring-blue-600" href="{{ form.href or '#'}}">
+              <a class="flex items-center py-4 pl-5 pr-8 bg-white rounded-lg gap-4 transition duration-300 ease-out shadow-sm sm:py-6 group fine:hover:text-blue-600 fine:hover:shadow-lg fine:hover:underline focus:outline-none focus:ring-2 focus:ring-blue-600" href="{{ form.href or '#'}}">
                 {%- if form.icon -%}
                   {{ form.icon | svgContents("w-12 h-12 md:w-16 md:h-16") | safe }}
                 {%- endif -%}
@@ -67,12 +67,12 @@ permalink: '/index.html'
       </div>
     </div>
 
-    <div class="grid py-8 mt-1 grid-cols-layout bg-gray-50 md:pb-12">
+    <div class="py-8 mt-1 grid grid-cols-layout bg-gray-50 md:pb-12">
       <div class="col-wide">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Aktuelt</h2>
-        <div class="grid gap-2 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
+        <div class="mt-4 grid gap-2 sm:gap-4 md:gap-6 sm:grid-cols-2">
           {%- for news in newsList -%}
-            <a class="grid gap-2 px-6 py-6 duration-300 ease-out bg-white rounded-lg shadow-sm group transition-custom fine:hover:text-blue-600 fine:hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-600" href="#">
+            <a class="px-6 py-6 bg-white rounded-lg grid gap-2 duration-300 ease-out shadow-sm group transition-custom fine:hover:text-blue-600 fine:hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-600" href="#">
               <span class="max-w-[30ch] text-xl font-semibold md:text-2xl group-fine:hover:text-blue-600 group-fine:hover:underline">{{ news.title | safe }}</span>
               <span class="text-lg opacity-70">{{ news.date }}</span>
             </a>
@@ -81,11 +81,11 @@ permalink: '/index.html'
       </div>
     </div>
 
-    <div class="grid pt-10 pb-12 bg-white grid-cols-layout md:pb-20">
+    <div class="pt-10 pb-12 bg-white grid grid-cols-layout md:pb-20">
       <div class="col-wide">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Kontakt oss</h2>
-        <div class="grid gap-8 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
-          <div class="relative grid gap-2 px-6 py-6 bg-blue-50 rounded-t-3xl rounded-r-3xl group">
+        <div class="mt-4 grid gap-8 sm:gap-4 md:gap-6 sm:grid-cols-2">
+          <div class="relative px-6 py-6 grid gap-2 bg-blue-50 rounded-t-3xl rounded-r-3xl group">
             <h3 class="text-xl font-semibold md:text-2xl">
               <a href="#" class="text-blue-600 underline fine:hover:text-deepblue-600 fine:hover:no-underline">Du kan chatte med oss</a>
             </h3>
@@ -94,7 +94,7 @@ permalink: '/index.html'
               <polygon class="fill-blue-50" points="0 0, 24 0, 0 24" />
             </svg>
           </div>
-          <div class="relative grid content-start gap-2 px-6 py-6">
+          <div class="relative content-start px-6 py-6 grid gap-2">
             <h3 class="text-xl font-semibold md:text-2xl">
               <a href="#" class="text-blue-600 underline fine:hover:text-deepblue-600 fine:hover:no-underline">Du kan også ringe eller skrive til oss</a>
             </h3>
