--- a/src/pages/omrade/omrade.njk
+++ b/src/pages/omrade/omrade.njk
@@ -8,16 +8,16 @@ activeRole: 'Arbeidsgiver'
 
 {%- block content -%}
   <main class="">
-    <div class="grid pt-8 bg-white grid-cols-layout">
+    <div class="pt-8 bg-white grid grid-cols-layout">
       <div class="flex justify-between col-wide">
         <h1 class="self-center text-3xl font-semibold leading-tight md:text-4xl">Helse og sykdom</h1>
         {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents() | safe }}
       </div>
     </div>
-    <div class="grid pt-8 pb-20 bg-deepblue-50 grid-cols-layout md:pt-12 ">
+    <div class="pt-8 pb-20 grid bg-deepblue-50 grid-cols-layout md:pt-12 ">
       <div class="col-wide">
         <h2 class="-mt-2 text-xl font-semibold sr-only md:text-3xl">Hva gjelder det</h2>
-        <ul class="grid gap-2 mt-4 md:grid-cols-2 sm:gap-3 md:gap-6 lg:grid-cols-3">
+        <ul class="mt-4 grid gap-2 md:grid-cols-2 sm:gap-3 md:gap-6 lg:grid-cols-3">
           {%- for item in situationList -%}
             <li class="relative flex gap-4 px-4 py-4 bg-white rounded-lg shadow-sm min-h-[12rem]">
               {%- if item.icon -%}
