--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -9,14 +9,14 @@ order: 4
 {%- from "macros/microcard.njk" import microcard -%}
 
 {%- block content -%}
-  <main class="grid py-8 text-lg md:py-12 grid-cols-layout">
+  <main class="py-8 text-lg grid md:py-12 grid-cols-layout">
     <div class="relative col-wide grid sm:grid-cols-[5rem_auto] gap-x-8 items-start mb-12">
       {{ '/src/_includes/svg/pictograms/utvidet-barnetrygd.svg' | svgContents('w-[calc(8vw+3rem)] h-auto max-w-24 md:-ml-2 text-green-800 absolute right-0 top-3 sm:static') | safe }}
 
       <div class="sm:col-start-2 sm:row-start-1">
         <p class="text-base tracking-wider uppercase opacity-70">Pengestøtte</p>
         <h1 class="min-w-0 pr-24 mt-1 text-3xl font-semibold leading-tight sm:pr-0 sm:text-5xl sm:leading-tight">Utvidet barnetrygd</h1>
-        <p class="flex items-center gap-3 mt-5 text-base opacity-70">
+        <p class="flex items-center mt-5 text-base gap-3 opacity-70">
           Oppdatert 22. desember 2022
         </p>
       </div>
@@ -48,7 +48,7 @@ order: 4
         </div>
 
         {# Filter + Innhold #}
-        <div class="grid w-full max-w-3xl gap-4 md:row-start-2 md:mx-0 md:max-w-none">
+        <div class="w-full max-w-3xl grid gap-4 md:row-start-2 md:mx-0 md:max-w-none">
 
           {# Filter #}
           <div class="px-6 py-4 mt-4 sm:px-8 sm:py-6 bg-blue-50 max-w-prose">
@@ -66,13 +66,13 @@ order: 4
             {%- if not loop.first -%}
             <div class="relative p-6 grid bg-gray-50 rounded max-w-prose min-w-0 sm:p-8 {{ 'mt-12 pt-8 sm:pt-12' if section.icon }}" id="{{ section.title | slugify }}">
               {%- if section.icon -%}
-              <div class="absolute top-0 inline-grid p-4 mx-auto -translate-x-1/2 -translate-y-1/2 bg-green-200 rounded-full left-1/2 justify-self-center">
+              <div class="absolute top-0 p-4 mx-auto bg-green-200 rounded-full inline-grid -translate-x-1/2 -translate-y-1/2 left-1/2 justify-self-center">
                 {{ section.icon | svgContents('w-6 h-6 sm:w-7 sm:h-7') | safe }}
               </div>
               {%- endif -%}
 
               <h2 class="text-3xl font-semibold sm:text-4xl sm:leading-snug {{ 'md:-mt-2' if section.icon }}">{{ section.title | safe }}</h2>
-              <a href="#" class="inline-flex items-center gap-2 mt-4 mb-8 text-base text-blue-500 hover:underline hover:text-blue-600">
+              <a href="#" class="inline-flex items-center mt-4 mb-8 text-base text-blue-500 gap-2 hover:underline hover:text-blue-600">
                 {{ '/src/_includes/svg/icons/link.svg' | svgContents('w-4 h-4') | safe }}
                 <span>Kopier lenke</span>
               </a>
@@ -109,7 +109,7 @@ order: 4
 
                 {%- if block.type === 'tiles' -%}
                   <h4 class="text-xl font-semibold">{{ block.title | safe }}</h4>
-                  <div class="grid gap-3 mt-1">
+                  <div class="mt-1 grid gap-3">
                     {%- for item in block.data -%}
                       <div class="relative flex items-center gap-4 px-4 py-3 bg-white rounded-lg shadow-sm hover:shadow hover:z-10 transition-colors duration-200 ease-out {{ item.hover }} ring-1 ring-gray-500/5">
                         {{ item.icon | svgContents('max-w-16 h-auto w-[calc(8vw+1rem)]') | safe }}
