--- a/src/pages/sok/sok.njk
+++ b/src/pages/sok/sok.njk
@@ -122,7 +122,7 @@ order: 12
           </button>
         </div>
 
-        <div class="grid mt-2">
+        <div class="mt-2 grid">
           {%- for item in range(1,10) -%}
             <article class="py-4 border-t border-gray-200">
               <h3><a class="text-2xl font-semibold leading-tight text-blue-500 hover:underline hover:text-blue-600" href="#">Title</a></h3>
