--- a/src/pages/tom/tom.njk
+++ b/src/pages/tom/tom.njk
@@ -6,7 +6,7 @@ order: 99
 {%- extends 'base-new.njk' -%}
 
 {%- block content -%}
-  <main class="grid items-center py-12 grid-cols-layout">
+  <main class="items-center py-12 grid grid-cols-layout">
     <div class="font-bold leading-none text-center uppercase col-narrow xl:col-wide text-squishy text-gray-700/5">Tom side</div>
   </main>
 {%- endblock -%}
