--- a/src/pages/soknad-og-skjema/dagpenger.njk
+++ b/src/pages/soknad-og-skjema/dagpenger.njk
@@ -27,7 +27,7 @@ order: 7
 
       <div class="md:col-start-2 md:grid md:grid-cols-[2.2fr_0.8fr] gap-x-16 items-start gap-4">
         <div class="mt-12 text-lg max-w-prose markup">
-          <form x-data="{ applicationFormat: '' }">
+          <form x-data="{ applicationFormat: 'digital' }">
             <fieldset>
               <legend class="font-semibold">Hvordan vil du sende søknaden?</legend>
               <ul class="grid mt-1 justify-items-start">
